--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   one-agent:
-    image: one-security
+    image: hd_station
     ports:
       - "8080:8080"
     environment:
